[gd_scene load_steps=5 format=3 uid="uid://cju7ll34rpnfu"]

[ext_resource type="Theme" uid="uid://bytiyxp3n1j8y" path="res://assets/default_theme.tres" id="1_od4y2"]
[ext_resource type="Script" path="res://ui/parent_button.gd" id="2_67iv6"]
[ext_resource type="AudioStream" uid="uid://qexthdlpn1pr" path="res://assets/audio/a_menu_move.wav" id="3_6ara1"]
[ext_resource type="AudioStream" uid="uid://dimvmpq3t1cyh" path="res://assets/audio/a_menu_select.wav" id="4_5qrg0"]

[node name="ParentButton" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
theme = ExtResource("1_od4y2")
alignment = 0
script = ExtResource("2_67iv6")

[node name="FocusSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6ara1")
bus = &"Sounds"

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5qrg0")
bus = &"Sounds"

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
